Add bundle.js, jumbotron to test Bootstrap

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -3,8 +3,11 @@
   <head>
     <meta charset="UTF-8"/>
     <title>Yi Jing</title>
+    <script src="./bundle.js"></script>
   </head>
   <body>
-    
+    <div class="jumbotron">
+      <h1 class="display-3 text-center"><span class="text-danger">YI JING</span></h1>
+    </div>    
   </body>
 </html>
