Add hexagrams to index.html

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -8,6 +8,7 @@
   <body>
     <div class="jumbotron">
       <h1 class="display-3 text-center"><span class="text-danger">YI JING</span></h1>
-    </div>    
+    </div>
+    <h1 class="text-center">䷀䷁</h1>
   </body>
 </html>
